--- a/playlistach.cabal
+++ b/playlistach.cabal
@@ -35,6 +35,8 @@ executable playlistach
                        wai-middleware-static,
                        warp,
                        warp-tls,
-                       Spock
+                       servant,
+                       servant-server,
+                       string-conversions
   hs-source-dirs:      src
   default-language:    Haskell2010
