Improve streaming infrastructure

--- a/playlistach.cabal
+++ b/playlistach.cabal
@@ -19,6 +19,7 @@ executable playlistach
   build-depends:       base >=4.8 && <4.9,
                        array,
                        either,
+                       exceptions,
                        mmorph,
                        mtl,
                        VKHS >=0.5 && <0.6,
@@ -27,6 +28,7 @@ executable playlistach
                        aeson,
                        http-client,
                        http-types,
+                       http-media,
                        hedis,
                        pipes,
                        pipes-safe,
