Implement servant vk integration (to omit curl); Refactoring

--- a/playlistach.cabal
+++ b/playlistach.cabal
@@ -18,6 +18,7 @@ executable playlistach
   -- other-extensions:
   build-depends:       base >=4.8 && <4.9,
                        array,
+                       vector,
                        either,
                        exceptions,
                        mmorph,
