--- a/playlistach.cabal
+++ b/playlistach.cabal
@@ -31,6 +31,7 @@ executable playlistach
                        aeson,
                        formatting,
                        http-client,
+                       http-client-tls,
                        http-types,
                        http-media,
                        hedis,
